--- a/q/275630.html
+++ b/q/275630.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td></td><td>240922T173205Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275690#275690">A.J Serv</a></td></tr>
-<tr d-ix="1"><td>077</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>076</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>nan</td><td></td><td>240922T173205Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275690#275690">A.J Serv</a></td></tr>
 <tr d-ix="2"><td>101</td><td>Python</td><td>240920T162502Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275662#275662">William</a></td></tr>
 <tr d-ix="3"><td>468</td><td>Rust</td><td>240921T115311Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275669#275669">bzr</a></td></tr>
 <tr d-ix="4"><td>424</td><td>TurboWarp</td><td>240921T121932Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275671#275671">SectorCo</a></td></tr>
@@ -41,42 +41,43 @@
 <tr d-ix="12"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
 <tr d-ix="13"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
-<div class="snippet-code">
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=e=event;return!(value[3]||!++e.key&amp;e.which!=8)
-https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634</code></pre>
-</div>
-</div>
-</p>
-</div>
-<div id="pu1" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> <s>94</s> <s>84</s> <s>80</s> 77 bytes</h1>
+<div id="pu0" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> <s>94</s> <s>84</s> <s>80</s> <s>77</s> 76 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=e=event;return!(value[3]||!++e.key&amp;e.which!=8)</code></pre>
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=c=event.key;return!(value[3]||c[5]!='p'&amp;!++c)</code></pre>
 </div>
 </div>
 </p>
 <p>-54 bytes thanks to <em>@Shaggy</em>.<br />
 -10 bytes thanks to <em>@l4m2</em> and <em>@jdt</em>.<br />
--3 bytes thanks to <em>@jdt</em> again.</p>
+-4 bytes thanks to <em>@jdt</em> again.</p>
 <p>I'm still trying to find a browser that uses asterisk for password-fields instead of bullets (the four browsers I had installed - Chrome; Firefox; Edge; Opera - unfortunately all use bullets). But certain old browser versions defintely used asterisks for password input-fields, so it's assumed this snippet is used in one of those browsers / versions.</p>
 <p><strong>Explanation:</strong></p>
 <ul>
 <li><code>&lt;input</code> - Input box</li>
 <li><code>type=password</code> - Of type password, so every valid character that's typed (aka digits) will be shown as asterisks in certain browsers (in most modern browsers they'll be shown as bullet points instead, though)</li>
 <li><code>onkeydown=</code> - Capture and handle key-presses</li>
-<li><code>e=event;</code> - Save <code>event</code> in variable <code>e</code>, since we'll use it twice later on</li>
+<li><code>c=event.key;</code> - Save the keypress as character in variable <code>c</code>, since we'll use it twice later on</li>
 <li><code>return</code> - Return a boolean:</li>
-<li><code>!(...)</code> - By negating the following:</li>
+<li><code>!(...)</code> - By negating the following bits:</li>
 <li><code>value[3]</code> - Stop after the fourth digit has been entered</li>
 <li><code>||</code> - Otherwise:</li>
-<li><code>!++e.key&amp;e.which!=8</code> - If <code>c</code> is NOT a backspace (codepoint 8) nor a digit (<code>e.key</code> range [0,9]; <code>e.which</code> codepoint range [48,57]) - The <code>++e.key</code> will fail for any non-digit value, becoming <code>NaN</code>.</li>
+<li><code>c[5]!='p'</code> - If <code>c</code> is NOT a backspace - The sixth character is a 'p', which only applies to the unprintables 'Backspace' and 'PageUp', of which the second won't input or remove anything anyway</li>
+<li><code>&amp;!++c</code> - nor a digit (<code>e.key</code> range ['0','9']) - The <code>++e.key</code> will fail for any non-digit value, becoming <code>NaN</code>.</li>
 </ul>
 <p><em>Known issue<s>s</s>:</em></p>
 <ul>
 <li><s>Shift + digits (aka <code>!@#$%&amp;*()</code>) seem to work again unfortunately, even though I explicitly fixed that in my initial 150 bytes version.</s> EDIT: It works again since the 77 bytes version that uses <code>e.key</code> instead of <code>e.which</code> to check whether it's a digit.</li>
 <li>'preparation characters' (aka <code>'&quot;`~^</code>) still seem to work unfortunately (even beyond four characters)..</li>
 </ul>
+</div>
+<div id="pu1" class="pu"><p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=e=event;return!(value[3]||!++e.key&amp;e.which!=8)
+https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634</code></pre>
+</div>
+</div>
+</p>
 </div>
 <div id="pu2" class="pu"><h1>Python, 101 bytes</h1>
 <pre><code>import sys;s=0
