--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240922T184128Z
+"   /golfscore                                      20240922T191737Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275689.html">Tic-tac-toe encode them all                     : 0275689</a>
 <a href="q/237085.html">Swap every two elements in a list               : 0237085</a>
 <a href="q/275630.html">Enter a personal identification number          : 0275630</a>
 <a href="q/3815.html">Generate Pascals triangle                       : 0003815</a>
