--- a/q/275689.html
+++ b/q/275689.html
@@ -26,14 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>143</td><td>Perl 5</td><td>240922T191737Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275692#275692">Kjetil S</a></td></tr>
+<tr d-ix="0"><td>142</td><td>Perl 5</td><td>240922T191737Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275692#275692">Kjetil S</a></td></tr>
+<tr d-ix="1"><td>104</td><td>Ruby</td><td>240922T194645Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275693#275693">Jordan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 143 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 142 bytes</h1>
 
-<pre class="lang-perl prettyprint-override"><code>sub{local($_,$n)=$&quot;x9;do{(s/x/x/g- s/o/o/g)!~/0|^1/ or$f{$_}=sprintf&quot;%013b&quot;,$n++}while s/([ o])x*$/($1eq$&quot;?o:x).($&quot;x(length($&amp;)-1))/e;$f{+pop}}
+<pre class="lang-perl prettyprint-override"><code>sub{local($_,$n)=$&quot;x9;do{(s/x/x/g- s/o/o/g)!~/0|^1/ or$f{$_}=sprintf&quot;%013b&quot;,$n++}while s/([ o])x*$/($1eq$&quot;?o:x).($&quot;x(-1+length$&amp;))/e;$f{+pop}}
 </code></pre>
-<p><a href="https://tio.run/##fZRRb5swEMff8ymuyKntJimctkxaKOnTnivltduitTVpNMrRQFVPlH711AYxpQn2@QWwf/e//51woXbZfM/SZF@@3NUZ3f/JBFtPWS4TFujv8QPVogy1WZsZlCGZtZFn72H09htDoB1La7ZukrLYbfMqDcYRfrkLDD6ZNK@P20wZRtwC/ZL6goWCoXpmwTUttLwUJr/IVL6pHgU7lzOUMlSxyTcpqGiafTxKaQdP/4BVqqxAjMBEvc2LlypZcuiDT0HpQt1X6gGSJfDoMHgz/YxpG2TiCDuq/1v0dX6MApFFtT5VRKuFbfBhTA8VajF0FNpj2oc51ciHoVNN@4p0e9PkxtDlTYOvJejyZjCfGg6NvBvciRra4@jy1mPajWHkVDttySHmUtPkw4a92T6CF0MX5mkJDv88HUY@zKVG4FNzeiPwqTm9@caN7dxGsm5Be8FsqIIEzlkqgLW3TZetARm3Z7rLAYLxbF5Cu7WAq3G5NFu9xALGpXk1mezTzzzoyrLRplfPfeqeaOAaOP3lC@A/VqubFT8gDos4@fw/wWeJeNTsPwA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
-<p>The function gives each of the 6045 valid input strings a unique identifier with 13 bits in the hashmap <code>%f</code> and return those 13 bits (as a string of <code>0</code>s and <code>1</code>s) for all valid input strings of length 9 consisting of the three charachters <code> </code>, <code>o</code> and <code>x</code> where the number of <code>x</code>s is the same or one more than the number of <code>o</code>s. I chose to include the empty input of nine <code> </code>s.</p>
+<p><a href="https://tio.run/##fZRNT4NAEIbv/RUj2bpgW2GiNbFIPXk26dWPRu1SG5HBgnEN4l@vuxBMP9idvQC7z7zzzoTNxDoZb1gcbfLP5zKhl6fEZfMhS72IOfIyXFDp5r5UazmC3Ce1lt7Rrx/8PKIPtGZxyeZVlGfrVVrETj/As2dH4YNB9fW6SoRi3DugB0@eMN9lKD6Yc00T6Z26Kr87wkEi0mXxyo49zxehSjfIKKuqTdiLaQ3v38AKkRfg9kBFuUqzzyKacmiDD0HITLwUYgHRFHiwHbwa7mJSB6nYw/bKvwjOx/soEGlUykNF1FpYB@/GZFehGkNDoS0mbZhRjWwYGtWkrUizN0lmDE3eJNhagiZvCrOpYdfIm8EdqKE@jiZvLSbNGAZGtcOWbGMmNUk2rNub7iNYMTRhlpZg98/TYGTDTGoENjWjNwKbmtGbbdxYz63nlTWoL5glFRDBMYtdYPVt02SrwAvrM83lAE5/NM6h3prAVT@fqq1WYgL9XL2qTPrpPnWasnTU6cVHm7olKrgGTm98AvxmNrud8S1iu4iDz/8JdiXCXrX5Aw" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
+<p>The function gives each of the 6045 valid input strings a unique identifier with 13 bits in the hashmap <code>%f</code> and return those 13 bits (as a string of <code>0</code>s and <code>1</code>s) for all valid input strings of length 9 consisting of the three charachters <code> </code>, <code>o</code> and <code>x</code> where the number of <code>x</code>s is the same or one more than the number of <code>o</code>s. I chose to include the empty input of nine <code> </code>s which returns thirteen <code>0</code>s and this adds one more to the count of valid inputs: 6046 as I think the challenge wasn't clear about the all space input.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 104 bytes</h1>
+<p>Brute-force solution. Iterates over all numbers in base 3, transliterates each to <code>o</code>/<code>x</code>/space, then if it’s a valid position increments a counter, breaking and returning the count if it’s equal to the input.</p>
+<pre class="lang-ruby prettyprint-override"><code>-&gt;s{i=j=0
+(t=(&quot;%9d&quot;%j.to_s(3)).tr&quot;012&quot;,&quot; xo&quot;
+i+=1if(0..1)===t.count(?x)-t.count(?o)
+j+=1)until s==t
+i-1}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsEiN9ulpSVpuhY3M3TtiqszbbNsDbg0Smw1lFQtU5RUs_RK8uOLNYw1NfVKipQMDI2UdJQUKvKVuDK1bQ0z0zQM9PQMNW1tbUv0kvNL80o07Cs0deHsfE2uLKAyTSAnM0ehGKiKK1PXsBZqX2qBglu0kgIMKMVyoQhUoAlUoKsAugIqUAHk5VdUKMAF8kGgAgiUYiGWLVgAoQE" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 
 <table id="st">
