--- a/q/275689.html
+++ b/q/275689.html
@@ -26,17 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>142</td><td>Perl 5</td><td>240922T191737Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275692#275692">Kjetil S</a></td></tr>
-<tr d-ix="1"><td>104</td><td>Ruby</td><td>240922T194645Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275693#275693">Jordan</a></td></tr>
+<tr d-ix="0"><td>091</td><td>JavaScript ES6</td><td>240922T195155Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275694#275694">Arnauld</a></td></tr>
+<tr d-ix="1"><td>142</td><td>Perl 5</td><td>240922T191737Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275692#275692">Kjetil S</a></td></tr>
+<tr d-ix="2"><td>104</td><td>Ruby</td><td>240922T194645Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275693#275693">Jordan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 142 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 91 bytes</h1>
+<p>Expects a 9-character string made of <code>' '</code>, <code>'O'</code>, <code>'X'</code> and returns an integer in <span class="math-container">\$[0\dots6045]\$</span>.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>s=&gt;eval(`for(j=n=0;(g=k=&gt;i--?g(k/3|0)+&quot;O X&quot;[t-=(k%=3)-1,k]:t=&quot;&quot;)(n++,i=9)!=s;j+=!t|!~t);j`)
+</code></pre>
+<p><a href="https://tio.run/##jc7BCoJAEAbge0@xLgS76JbRqWTsEfa6EIFiKu6KG7p4kl6rey9ma9KlVPrn@DH/jIzbuEnq4mZYpa9pn0HfQJi2cUmiTNdEQgV@QHJQEBaMnXKitvvOpy7mSOCzYUDUGvaU7Tx1ORrAmJLKdb0CDtSBJpAuOKZz7oYGMqJ9oqtGl@mm1DnJCOY2SNhgSlcTJtCCDThrFudNoG/Dz8cw@GcDjeFTbeiTBRN/X3r/heyDE22DCT5a/wI" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 142 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>sub{local($_,$n)=$&quot;x9;do{(s/x/x/g- s/o/o/g)!~/0|^1/ or$f{$_}=sprintf&quot;%013b&quot;,$n++}while s/([ o])x*$/($1eq$&quot;?o:x).($&quot;x(-1+length$&amp;))/e;$f{+pop}}
 </code></pre>
 <p><a href="https://tio.run/##fZRNT4NAEIbv/RUj2bpgW2GiNbFIPXk26dWPRu1SG5HBgnEN4l@vuxBMP9idvQC7z7zzzoTNxDoZb1gcbfLP5zKhl6fEZfMhS72IOfIyXFDp5r5UazmC3Ce1lt7Rrx/8PKIPtGZxyeZVlGfrVVrETj/As2dH4YNB9fW6SoRi3DugB0@eMN9lKD6Yc00T6Z26Kr87wkEi0mXxyo49zxehSjfIKKuqTdiLaQ3v38AKkRfg9kBFuUqzzyKacmiDD0HITLwUYgHRFHiwHbwa7mJSB6nYw/bKvwjOx/soEGlUykNF1FpYB@/GZFehGkNDoS0mbZhRjWwYGtWkrUizN0lmDE3eJNhagiZvCrOpYdfIm8EdqKE@jiZvLSbNGAZGtcOWbGMmNUk2rNub7iNYMTRhlpZg98/TYGTDTGoENjWjNwKbmtGbbdxYz63nlTWoL5glFRDBMYtdYPVt02SrwAvrM83lAE5/NM6h3prAVT@fqq1WYgL9XL2qTPrpPnWasnTU6cVHm7olKrgGTm98AvxmNrud8S1iu4iDz/8JdiXCXrX5Aw" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 <p>The function gives each of the 6045 valid input strings a unique identifier with 13 bits in the hashmap <code>%f</code> and return those 13 bits (as a string of <code>0</code>s and <code>1</code>s) for all valid input strings of length 9 consisting of the three charachters <code> </code>, <code>o</code> and <code>x</code> where the number of <code>x</code>s is the same or one more than the number of <code>o</code>s. I chose to include the empty input of nine <code> </code>s which returns thirteen <code>0</code>s and this adds one more to the count of valid inputs: 6046 as I think the challenge wasn't clear about the all space input.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 104 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 104 bytes</h1>
 <p>Brute-force solution. Iterates over all numbers in base 3, transliterates each to <code>o</code>/<code>x</code>/space, then if it’s a valid position increments a counter, breaking and returning the count if it’s equal to the input.</p>
 <pre class="lang-ruby prettyprint-override"><code>-&gt;s{i=j=0
 (t=(&quot;%9d&quot;%j.to_s(3)).tr&quot;012&quot;,&quot; xo&quot;
