--- a/q/275689.html
+++ b/q/275689.html
@@ -26,13 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>032</td><td>Charcoal</td><td>240922T213047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275696#275696">Neil</a></td></tr>
-<tr d-ix="1"><td>033</td><td>K ngn/k</td><td>240922T202605Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275695#275695">ovs</a></td></tr>
-<tr d-ix="2"><td>091</td><td>JavaScript ES6</td><td>240922T195155Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275694#275694">Arnauld</a></td></tr>
+<tr d-ix="0"><td>081</td><td>JavaScript ES6</td><td>240922T195155Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275694#275694">Arnauld</a></td></tr>
+<tr d-ix="1"><td>032</td><td>Charcoal</td><td>240922T213047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275696#275696">Neil</a></td></tr>
+<tr d-ix="2"><td>033</td><td>K ngn/k</td><td>240922T202605Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275695#275695">ovs</a></td></tr>
 <tr d-ix="3"><td>142</td><td>Perl 5</td><td>240922T191737Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275692#275692">Kjetil S</a></td></tr>
 <tr d-ix="4"><td>104</td><td>Ruby</td><td>240922T194645Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275693#275693">Jordan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 32 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 81 bytes</h1>
+<p>Expects a 9-character string made of <code>' '</code>, <code>'O'</code>, <code>'X'</code> and returns an integer in <span class="math-container">\$[0\dots6045]\$</span>.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>f=(s,n)=&gt;(g=k=&gt;i--?g(k/3|0)+&quot;O X&quot;[t-=~-(k%=3),k]:t=&quot;&quot;)(n,i=9)!=s&amp;&amp;!t+!~t+f(s,-~n)
+</code></pre>
+<p><a href="https://tio.run/##jc5BCsIwEAXQvadIA0pCOyoogsLoEboNiItS2xJTEjHBhUiv5d6DGVPFjVbxz/Ixf2aXHTObH@TegTbbwvsSmU00xyWrUOFSAqwqpkaT85jHNCWCrh1gA0z1ccITtVk4pJQznUic8wjtYBC5OGpcXIYeaDT3udHW1MWwNhUrGU1DiAihnPc6TJAf1uJXC/jdBHk3er20Qz82yDNpVxt55YeJvy89/iLhwY621kT6NH8zeyeDewDrslyBlacCp@P57A4" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 32 bytes</h1>
 <pre><code>Ｐ×¹³0⮌⍘⌕ΦＥＸ³χ◧⍘ι xo⁹¬÷⁻№ιx№ιo²Ｓ²
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjeP-JbmlGQWFGXmlWiEZOamFmsYGusoKBkoaWpacwWAhYNSy1KLilM1nBKLU4NLgELpGm6ZeSlAIqcktUjDN7FAIyC_HMgCajQ00NRRCEhM8UlNK0HWkAk0U6EiXwkoa6kJJPzySzQ880pcMssyU1I1fDPzSos1nPNLgbaBVFaA1CG4QG1AvpEmiPTMKygtgRoKE7VeUpyUXAz10fJoJd2yHKXYVRUKCgr5FRUK-VwQCQA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation:</p>
@@ -49,18 +56,11 @@
 </code></pre>
 <p>Find the index of the input string and convert that to binary, LSB first.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 33 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 33 bytes</h1>
 <pre><code>(13#2)\&quot;x o&quot;[+b\&amp;~-2!+/1-!b:9#3]?
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJxLs9IwNFY20oxRqlDIV4rWTopRq9M1UtTWN9RVTLKyVDaOtefiSgNKKijkV4CUgDgVFfn5+UARJQDbAg+n" rel="nofollow noreferrer">Try it online!</a></p>
 <p><code>+b\&amp;~-2!+/1-!b:9#3</code> generates all valid boards using 0 for <code>x</code>, 1 for spaces and 2 for <code>o</code>. <code>&quot;x o&quot;[...]</code> converts the boards to strings, <code>?</code> finds the argument in the list of strings and <code>(13#2)\</code> converts the integer to 13 binary digits.</p>
-</div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 91 bytes</h1>
-<p>Expects a 9-character string made of <code>' '</code>, <code>'O'</code>, <code>'X'</code> and returns an integer in <span class="math-container">\$[0\dots6045]\$</span>.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>s=&gt;eval(`for(j=n=0;(g=k=&gt;i--?g(k/3|0)+&quot;O X&quot;[t-=(k%=3)-1,k]:t=&quot;&quot;)(n++,i=9)!=s;j+=!t|!~t);j`)
-</code></pre>
-<p><a href="https://tio.run/##jc7BCoJAEAbge0@xLgS76JbRqWTsEfa6EIFiKu6KG7p4kl6rey9ma9KlVPrn@DH/jIzbuEnq4mZYpa9pn0HfQJi2cUmiTNdEQgV@QHJQEBaMnXKitvvOpy7mSOCzYUDUGvaU7Tx1ORrAmJLKdb0CDtSBJpAuOKZz7oYGMqJ9oqtGl@mm1DnJCOY2SNhgSlcTJtCCDThrFudNoG/Dz8cw@GcDjeFTbeiTBRN/X3r/heyDE22DCT5a/wI" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 142 bytes</h1>
 
