--- a/q/103403.html
+++ b/q/103403.html
@@ -97,13 +97,13 @@
 <tr d-ix="68"><td>023</td><td>Pyth</td><td>161217T011942Z</td><td><a href="https://codegolf.stackexchange.com/questions/103403/print-the-f-%c3%97-f-times-table/103405#103405">Maltysen</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 33 bytes</h1>
-<pre><code>≡≡□∵(⊂∩∵(⊡:HexDigits)⌊⊃÷◿:)⊞×.⇡.16
+<pre><code>≡≡□∵(⊂∩(⊡:HexDigits)⌊⊃÷◿:)⊞×.⇡.16
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_12_1__4omh4omh4pah4oi1KOKKguKIqeKItSjiiqE6SGV4RGlnaXRzKeKMiuKKg8O34pe_Oiniip7Dly7ih6EuMTYK" rel="nofollow noreferrer">Try this online!</a></p>
 <p><strong>Explanation:</strong></p>
-<pre><code>                             ⊞×.⇡.16 =&gt; multiplication table
-   ∵(⊂∩∵(⊡:HexDigits)⌊⊃÷◿:)         =&gt; convert each number into hex digits
-≡≡□                                   =&gt; box them for formatting
+<pre><code>                            ⊞×.⇡.16 =&gt; multiplication table
+   ∵(⊂∩(⊡:HexDigits)⌊⊃÷◿:)         =&gt; convert each number into hex digits
+≡≡□                                  =&gt; box them for formatting
 </code></pre>
 </div>
 <div id="pu1" class="pu"><p><strong>Swift, 101 Bytes</strong></p>
