--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240923T010622Z
+"   /golfscore                                      20240923T011922Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275700.html">Reorder a string of length \$2^n\$ by permuting : 0275700</a>
 <a href="q/103403.html">Print the f  f times table                      : 0103403</a>
 <a href="q/275689.html">Tic-tac-toe encode them all                     : 0275689</a>
 <a href="q/275697.html">Figure out which of your friends reveals confide: 0275697</a>
