--- a/q/275700.html
+++ b/q/275700.html
@@ -26,13 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>Jelly</td><td>240923T011922Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275701#275701">Unrelate</a></td></tr>
+<tr d-ix="0"><td>211</td><td>Python3</td><td>240923T015712Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275702#275702">Ajax1234</a></td></tr>
+<tr d-ix="1"><td>008</td><td>Jelly</td><td>240923T011922Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275701#275701">Unrelate</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 9 bytes</h1>
-<pre><code>ịⱮLØ.ṗɗỤị
+<div id="pu0" class="pu"><h1>Python3, 211 bytes</h1>
+<pre><code>lambda n,s,o:[''.join(i)for i in product(*[['1','0']]*len(s))if all(s[int(''.join(x for x,_ in sorted([*zip(bin(j)[2:].zfill(n),o)],key=lambda x:x[1])),2)]==i[j]for j in range(len(s)))][0]
+from itertools import*
 </code></pre>
-<p><a href="https://tio.run/##y0rNyan8///h7u5HG9f5HJ6h93Dn9JPTH@5eAhT5//@/sY6CoY6C0X91Q0MDQwMgUgcA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##NY7BasMwEETv/QrdpDVLkJxLMfhLFFGcWmrXtbVCUsHJz7sWpDC34b2Z9KjfHK/vKR9hvB3rtN3nSUQsyIOV8rIwRUUQOAsSFEXKPP9@VtVZK41EqaVz3eqjKgAUxLSuqliKVf2zu2jsjh@NLpyrn5XtnpTU/WwXsP3gLs9AJxgBGRz@@Mf4@rEPuzUOAHtw40h2cU22NFWe4pdXr2VwVru3kHkTVH2uzGsRtKVzrjtSbn@CuqI0Rht9RqLtUWNTH38" rel="nofollow noreferrer">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>9</s> 8 bytes</h1>
+<pre><code>ịⱮL2ṗɗỤị
+</code></pre>
+<p><a href="https://tio.run/##y0rNyan8///h7u5HG9f5GD3cOf3k9Ie7lwD5////N9ZRMNRRMPqvbmhoYGgAROoA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
 <p>Pretty naive implementation. Takes a 1-indexed permutation list <span class="math-container">\$[\sigma(1), ..., \sigma(n)]\$</span> on the left, and the string <span class="math-container">\$s\$</span> on the right.</p>
+<pre><code>   2ṗ       Raise [1, 2] to the Cartesian power of
+  L         the length of the permutation (= n),
+ịⱮ   ɗ      and index the permutation into each result.
+      Ụ     Grade that up (argsort),
+       ị    and index into s.
+</code></pre>
 </div>
 
 <table id="st">
