--- a/q/275700.html
+++ b/q/275700.html
@@ -26,16 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>188</td><td>Python3</td><td>240923T015712Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275702#275702">Ajax1234</a></td></tr>
-<tr d-ix="1"><td>008</td><td>Jelly</td><td>240923T011922Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275701#275701">Unrelate</a></td></tr>
+<tr d-ix="0"><td>113</td><td>Python</td><td>240923T042739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275703#275703">Unrelate</a></td></tr>
+<tr d-ix="1"><td>188</td><td>Python3</td><td>240923T015712Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275702#275702">Ajax1234</a></td></tr>
+<tr d-ix="2"><td>008</td><td>Jelly</td><td>240923T011922Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275701#275701">Unrelate</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python3, 188 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 113 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>lambda s,p:[s[i]for i in g(range(len(s)),*p[::-1])]
+g=lambda s,h,*t:sorted(t and g(s,*t)or s,key=lambda i:i&gt;&gt;h&amp;1)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=PY1BCsIwFET3nuKvbFJ-oXElgfYiMYtIkzZY05jERc_ipiB6Dc_hbQxUhYGB4c3M7ennNExuuZvm8LgmU-3fl1Gdj52CiJ6LKKw0UwAL1kFPgnK9JqN2JFKKpRecV0xSuembf2vAMvE4haQ7kkC5LvdizmieiXjS8w-13LbtsGV0PX75YF0ihhSM1azOKhAEQ9gh1JJ-qWVZ_QM" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Definitely golfable and probably beatable by a more direct approach, but this one is just too much fun. (<code>2*&amp;ÞƒJ’$}‘ị</code> for 11 in Jelly--thanks 1-indexing...) Takes an <em>inverse</em> 0-indexed permutation list <span class="math-container">\$[\sigma^{-1}(0 ),...,\sigma^{-1}(n-1)]\$</span>, where the inverse is equivalently the grade-up. (<a href="https://ato.pxeger.com/run?1=PU5LCsIwEN17iqzsJKTQuJJAe5HYRaRpGqxpSNJFBU_ipiB6Dc_hbYy0CgMz7zNv5vZ0U-wGO9_b8vAYY5vv39deno-NRIE6LsjFOCBh8FE18J01eGm1gl5ZCBhT4gTnOasxTQjXgtUbXf4TOkoiX7cjkrZBGkLi8OCTelLTz2q4qapuy_DyxMt5YyO0kDFWsCJVRpHYUVRQlG6trnle-gc" rel="nofollow noreferrer">125 bytes if that's not allowed.</a>)</p>
+<p>Since <code>sorted</code> is stable, this sorts by each bit in permutation order, essentially &quot;bubbling&quot; that bit to most significant (w.r.t. the destination indices) before being &quot;pushed down&quot; by the next.</p>
+</div>
+<div id="pu1" class="pu"><h1>Python3, 188 bytes</h1>
 <pre><code>lambda n,s,o:[''.join(i)for i in product(*['10']*len(s))if all(s[int(''.join(x for _,x in sorted([*zip(o,bin(j)[2:].zfill(n))])),2)]==i[j]for j in range(len(s)))][0]
 from itertools import*
 </code></pre>
 <p><a href="https://tio.run/##Nc3BasMwEATQe79CN2nNEiTnUgL@ElUUp7aSNbJWSCqk@XlXggTmNryZ9FfvHM@fKR9@@jrCvF@XWUQsyBcr5WljiorAcxYkKIqUefn9qWqw0mjphrBGVQDIizkEVSzFqt7sITr7xkeHhXNdF2WHJyXFeG39Bna8uNPTU6MRwAHgCG6ayG6u063DPMfbql4/4Kx2Hz7zLqiuuTKHImhPbXw4Uu7vXp1RGqONbpFoR9Ro2vTxDw" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>9</s> 8 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>9</s> 8 bytes</h1>
 <pre><code>ịⱮL2ṗɗỤị
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///h7u5HG9f5GD3cOf3k9Ie7lwD5////N9ZRMNRRMPqvbmhoYGgAROoA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
