--- a/q/275700.html
+++ b/q/275700.html
@@ -26,11 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>113</td><td>Python</td><td>240923T042739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275703#275703">Unrelate</a></td></tr>
-<tr d-ix="1"><td>188</td><td>Python3</td><td>240923T015712Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275702#275702">Ajax1234</a></td></tr>
-<tr d-ix="2"><td>008</td><td>Jelly</td><td>240923T011922Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275701#275701">Unrelate</a></td></tr>
+<tr d-ix="0"><td>016</td><td>Charcoal</td><td>240923T045516Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275704#275704">Neil</a></td></tr>
+<tr d-ix="1"><td>113</td><td>Python</td><td>240923T042739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275703#275703">Unrelate</a></td></tr>
+<tr d-ix="2"><td>188</td><td>Python3</td><td>240923T015712Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275702#275702">Ajax1234</a></td></tr>
+<tr d-ix="3"><td>008</td><td>Jelly</td><td>240923T011922Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275701#275701">Unrelate</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 113 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
+<pre><code>⭆θ§θΣＥη∧＆κＸ²μＸ²λ
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRCO4BEil@yYWaBTqKDiWeOalpFaAmMGluRog0QygaF6KhlNmSXlmcSqIma2jEJBfnlqkYaSjkKupicTL0YQA6///DQ0NDA2AiMvQyOC/blkOAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes <code>s</code> as the first input as a list or bitstring and <code>σ</code> as the second input as a list (or string if <code>n&lt;11</code>) of 0-indexed destination indices and outputs a bitstring. Explanation:</p>
+<pre><code> θ                  First input `s`
+⭆                   Map over characters and join
+   θ                First input `s`
+  §                 Indexed by
+      η             Second input `σ`
+     Ｅ              Map over indices
+         κ          Outer index
+        ＆           Bitwise and
+           ²        Literal integer `2`
+          Ｘ         Raised to power
+            μ       Source index
+       ∧            Logical And
+              ²     Literal integer `2`
+             Ｘ      Raised to power
+               λ    Destination index
+    Σ               Take the sum
+</code></pre>
+<p>(If you run this code on ATO instead of TIO then you can also pass <code>σ</code> as a dictionary mapping 0-indexed source indices to destination indices.)</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 113 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda s,p:[s[i]for i in g(range(len(s)),*p[::-1])]
 g=lambda s,h,*t:sorted(t and g(s,*t)or s,key=lambda i:i&gt;&gt;h&amp;1)
 </code></pre>
@@ -38,13 +62,13 @@ g=lambda s,h,*t:sorted(t and g(s,*t)or s,key=lambda i:i&gt;&gt;h&amp;1)
 <p>Definitely golfable and probably beatable by a more direct approach, but this one is just too much fun. (<code>2*&amp;ÞƒJ’$}‘ị</code> for 11 in Jelly--thanks 1-indexing...) Takes an <em>inverse</em> 0-indexed permutation list <span class="math-container">\$[\sigma^{-1}(0 ),...,\sigma^{-1}(n-1)]\$</span>, where the inverse is equivalently the grade-up. (<a href="https://ato.pxeger.com/run?1=PU5LCsIwEN17iqzsJKTQuJJAe5HYRaRpGqxpSNJFBU_ipiB6Dc_hbYy0CgMz7zNv5vZ0U-wGO9_b8vAYY5vv39deno-NRIE6LsjFOCBh8FE18J01eGm1gl5ZCBhT4gTnOasxTQjXgtUbXf4TOkoiX7cjkrZBGkLi8OCTelLTz2q4qapuy_DyxMt5YyO0kDFWsCJVRpHYUVRQlG6trnle-gc" rel="nofollow noreferrer">125 bytes if that's not allowed.</a>)</p>
 <p>Since <code>sorted</code> is stable, this sorts by each bit in permutation order, essentially &quot;bubbling&quot; that bit to most significant (w.r.t. the destination indices) before being &quot;pushed down&quot; by the next.</p>
 </div>
-<div id="pu1" class="pu"><h1>Python3, 188 bytes</h1>
+<div id="pu2" class="pu"><h1>Python3, 188 bytes</h1>
 <pre><code>lambda n,s,o:[''.join(i)for i in product(*['10']*len(s))if all(s[int(''.join(x for _,x in sorted([*zip(o,bin(j)[2:].zfill(n))])),2)]==i[j]for j in range(len(s)))][0]
 from itertools import*
 </code></pre>
 <p><a href="https://tio.run/##Nc3BasMwEATQe79CN2nNEiTnUgL@ElUUp7aSNbJWSCqk@XlXggTmNryZ9FfvHM@fKR9@@jrCvF@XWUQsyBcr5WljiorAcxYkKIqUefn9qWqw0mjphrBGVQDIizkEVSzFqt7sITr7xkeHhXNdF2WHJyXFeG39Bna8uNPTU6MRwAHgCG6ayG6u063DPMfbql4/4Kx2Hz7zLqiuuTKHImhPbXw4Uu7vXp1RGqONbpFoR9Ro2vTxDw" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>9</s> 8 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>9</s> 8 bytes</h1>
 <pre><code>ịⱮL2ṗɗỤị
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///h7u5HG9f5GD3cOf3k9Ie7lwD5////N9ZRMNRRMPqvbmhoYGgAROoA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
