--- a/q/41862.html
+++ b/q/41862.html
@@ -64,6 +64,11 @@ println    like print but prints spaces between arguments and a newline at the e
 <pre class="lang-go prettyprint-override"><code>import.&quot;fmt&quot;;func f(x int){Print(x);}
 func f(x int){print(x);}
 </code></pre>
+<p>If your challenge have standard I/O applied, then <code>print</code>-ing the output instead of returning the output can save your bytes.</p>
+<pre class="lang-go prettyprint-override"><code>func f(x int)int{return x}
+func f(x int)(y int){y=x}
+func f(x int){print(x)}
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><code>rand.Perm</code> is shorter than <code>rand.Shuffle</code> if and only if you can make an empty spare</h1>
 <p>These are 2 built-ins included in the <code>math/rand</code> and <code>math/rand/v2</code> packages to help with shuffle elements:</p>
