--- a/q/275697.html
+++ b/q/275697.html
@@ -26,9 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>050</td><td>JavaScript Node.js</td><td>240922T225207Z</td><td><a href="https://codegolf.stackexchange.com/questions/275697/figure-out-which-of-your-friends-reveals-confidential-information-to-the-media/275698#275698">l4m2</a></td></tr>
+<tr d-ix="0"><td>021</td><td>05AB1E</td><td>240923T083207Z</td><td><a href="https://codegolf.stackexchange.com/questions/275697/figure-out-which-of-your-friends-reveals-confidential-information-to-the-media/275712#275712">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>050</td><td>JavaScript Node.js</td><td>240922T225207Z</td><td><a href="https://codegolf.stackexchange.com/questions/275697/figure-out-which-of-your-friends-reveals-confidential-information-to-the-media/275698#275698">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>24</s> 21 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>.γ ð Q } I b € 0ÅÏº}J
+</code></pre>
+<p><a href="https://tio.run/##yy9OTMpM/f9f79xmhcMbFAIVahU8FZIUHjWtUTA43Hq4/9CuWi/8slxGRgA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/X@xyc3PXknhUdskBSX7/3rnNisc3qAQqFCr4KeQpPCoaY2CweHWw/2HdtV6/ddBlvZElwYA" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>.γ         # Adjacent group-by on the first (implicit) input-string:
+  ðQ       #  Check if the current character is a space
+ }I        # After the group-by: push the second input-integer
+   b       # Convert it to a binary-string
+    €0     # Put a 0 before each bit (and convert it to a binary-list)
+      ÅÏ   # Apply on the truthy (==1) positions in the grouped list:
+        º  #  Horizontal mirror, to double the space
+       }J  # After the truthy-apply: join it back together to a string
+           # (which is output implicitly as result)
+</code></pre>
+<p>The no-op spaces to comply to the challenge rules can be added anywhere in the code, except between the <code>.γ</code> and <code>ÅÏ</code>, since those are single 2-byte builtins.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x =&gt; n =&gt; x . replace (/ /g,c=&gt;n&amp;2**i++?c+c:c,i=0)
 </code></pre>
