--- a/q/275700.html
+++ b/q/275700.html
@@ -26,21 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>050</td><td>Python + NumPy</td><td>240923T070826Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275706#275706">Albert.L</a></td></tr>
-<tr d-ix="1"><td>016</td><td>Charcoal</td><td>240923T045516Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275704#275704">Neil</a></td></tr>
+<tr d-ix="0"><td>016</td><td>Charcoal</td><td>240923T045516Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275704#275704">Neil</a></td></tr>
+<tr d-ix="1"><td>050</td><td>Python + NumPy</td><td>240923T070826Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275706#275706">Albert.L</a></td></tr>
 <tr d-ix="2"><td>113</td><td>Python</td><td>240923T042739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275703#275703">Unrelate</a></td></tr>
 <tr d-ix="3"><td>188</td><td>Python3</td><td>240923T015712Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275702#275702">Ajax1234</a></td></tr>
 <tr d-ix="4"><td>008</td><td>Jelly</td><td>240923T011922Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275701#275701">Unrelate</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + NumPy, 50 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>lambda a,p:a.reshape(len(p)*[2]).transpose(p).flat
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vweI025ilpSVpuhY3jXISc5NSEhUSdQqsEvWKUoszEgtSNXJS8zQKNLWijWI19UqKEvOKC_KLU4Eiemk5iSVQnd5pRfm5CnmluQWVCpm5BflFJQpF8VxciQq2QDraUMdQxwCODWK5CiDiRiCRWC6ugqLMvBINrTQNoMWamhAjFyyA0AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Expects the binary string and the permutation as NumPy arrays and returns a NumPy flatiter object.</p>
-<h3>How?</h3>
-<p>Quite literal approach: Arranges the input sequence into a 2x2x...x2 hypercube, shuffles dimensions according to permutation, and flattens the result.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
 <pre><code>⭆θ§θΣＥη∧＆κＸ²μＸ²λ
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRCO4BEil@yYWaBTqKDiWeOalpFaAmMGluRog0QygaF6KhlNmSXlmcSqIma2jEJBfnlqkYaSjkKupicTL0YQA6///DQ0NDA2AiMvQyOC/blkOAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes <code>s</code> as the first input as a list or bitstring and <code>σ</code> as the second input as a list (or string if <code>n&lt;11</code>) of 0-indexed destination indices and outputs a bitstring. Explanation:</p>
@@ -60,8 +52,17 @@
              Ｘ      Raised to power
                λ    Destination index
     Σ               Take the sum
+                    Implicitly print
 </code></pre>
 <p>(If you run this code on ATO instead of TIO then you can also pass <code>σ</code> as a dictionary mapping 0-indexed source indices to destination indices.)</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + NumPy, 50 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>lambda a,p:a.reshape(len(p)*[2]).transpose(p).flat
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vweI025ilpSVpuhY3jXISc5NSEhUSdQqsEvWKUoszEgtSNXJS8zQKNLWijWI19UqKEvOKC_KLU4Eiemk5iSVQnd5pRfm5CnmluQWVCpm5BflFJQpF8VxciQq2QDraUMdQxwCODWK5CiDiRiCRWC6ugqLMvBINrTQNoMWamhAjFyyA0AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Expects the binary string and the permutation as NumPy arrays and returns a NumPy flatiter object.</p>
+<h3>How?</h3>
+<p>Quite literal approach: Arranges the input sequence into a 2x2x...x2 hypercube, shuffles dimensions according to permutation, and flattens the result.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 113 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda s,p:[s[i]for i in g(range(len(s)),*p[::-1])]
