--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240923T090113Z
+"   /golfscore                                      20240923T092335Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275689.html">Tic-tac-toe encode them all                     : 0275689</a>
+<a href="q/121118.html">Golf a Custom Fibonacci Sequence                : 0121118</a>
 <a href="q/275630.html">Enter a personal identification number          : 0275630</a>
 <a href="q/275697.html">Figure out which of your friends reveals confide: 0275697</a>
 <a href="q/275700.html">Reorder a string of length \$2^n\$ by permuting : 0275700</a>
-<a href="q/275689.html">Tic-tac-toe encode them all                     : 0275689</a>
 <a href="q/148897.html">BigNum Bakeoff Reboot                           : 0148897</a>
 <a href="q/237085.html">Swap every two elements in a list               : 0237085</a>
 <a href="q/41862.html">Tips for Golfing in Go                          : 0041862</a>
